--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,9 @@ spring:
     username: root
     password: w20040410
     url: jdbc:mysql://localhost:3306/db_recruitment?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
-
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
 
 mybatis-plus:
   global-config:
