--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,5 +43,5 @@ jwt:
 oss:
   endpoint: *****************
   access-key-id: *******************
-  access-key-secret: ******************8
+  access-key-secret: ******************
   bucket-name: **************
