--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: ******
+    password: w20040410
     url: jdbc:mysql://localhost:3306/db_recruitment?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
   jackson:
     serialization:
@@ -13,7 +13,7 @@ spring:
     redis:
       database: 0
       host: localhost
-      password: ******
+      password: 123456
       port: 6379
       timeout: 10s
       lettuce:
@@ -41,7 +41,7 @@ jwt:
   expire-time: 259200000
 
 oss:
-  endpoint: *****************
-  access-key-id: *******************
-  access-key-secret: ******************
-  bucket-name: **************
+  endpoint: https://oss-cn-chengdu.aliyuncs.com
+  access-key-id: LTAI5tKecua1aNm9ct9oQv5i
+  access-key-secret: uvbcaDGv6oontUjEVuM1RcfPJ66tpg
+  bucket-name: online-recruitment-system
