--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: XXXXXXXXXXXXXXXXXXXXXXX
+    password: XXXXXXXXXXXXXXXXXXXXXXXXX
     url: jdbc:mysql://localhost:3306/db_recruitment?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
   jackson:
     serialization:
@@ -13,7 +13,7 @@ spring:
     redis:
       database: 0
       host: localhost
-      password: XXXXXXXXXXXXXXXXXXXXXXX
+      password: XXXXXXXXXXXXXXXXXXXXXXXXX
       port: 6379
       timeout: 10s
       lettuce:
@@ -42,19 +42,19 @@ jwt:
 
 # 阿里云OSS对象存储
 oss:
-  endpoint: XXXXXXXXXXXXXXXXXXXXXXX
-  access-key-id: XXXXXXXXXXXXXXXXXXXXXXX
-  access-key-secret: XXXXXXXXXXXXXXXXXXXXXXX
-  bucket-name: XXXXXXXXXXXXXXXXXXXXXXX
+  endpoint: XXXXXXXXXXXXXXXXXXXXXXXXX
+  access-key-id: XXXXXXXXXXXXXXXXXXXXXXXXX
+  access-key-secret: XXXXXXXXXXXXXXXXXXXXXXXXX
+  bucket-name: XXXXXXXXXXXXXXXXXXXXXXXXX
 
 #本地对象存储
 minio:
-  endpoint: XXXXXXXXXXXXXXXXXXXXXXX
-  access-key: XXXXXXXXXXXXXXXXXXXXXXX
-  secret-key: XXXXXXXXXXXXXXXXXXXXXXX
-  bucket-name: XXXXXXXXXXXXXXXXXXXXXXX
+  endpoint: XXXXXXXXXXXXXXXXXXXXXXXXX
+  access-key: XXXXXXXXXXXXXXXXXXXXXXXXX
+  secret-key: XXXXXXXXXXXXXXXXXXXXXXXXX
+  bucket-name: XXXXXXXXXXXXXXXXXXXXXXXXX
 
 #配置图片存储方式
 recruitment:
   storage:
-    type: minio #配置存储方式可选 aliyun、minio
+    type: aliyun #配置存储方式可选 aliyun、minio
